feat: create navigation

--- a/index.html
+++ b/index.html
@@ -13,13 +13,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css">
-
+    <script src="https://kit.fontawesome.com/72220b4ed7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
+    <nav>
+        <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
+        <div class="nav-items">
+            <div class="nav-items-left">
+                <a href=""><i class="fa-solid fa-dice-d20"></i></i></a>
+                <input type="search" value=" szukaj" name="" id="">
+                <a href="#">Produkty</a>
+                <a href="#">Oferty</a>
+                <a href="#">O nas</a>
+            </div>
+            <div class="nav-items-right">
+                <a href="#">Zaloguj się</a>
+                <button class="sign-up-btn">Rejestracja</button>
+            </div>
+        </div>
+    </nav>
 
-
+    
 
 
     <script src="./js/script.js"></script>
