fix: update navigation

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
 <body>
 
     <nav>
-        <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
+        <div class="nav-mobile">
+            <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
+            <a href=""><i class="fa-solid fa-dice-d20"></i></a>
+            <a href="#">Zaloguj się</a>
+        </div>
         <div class="nav-items">
             <div class="nav-items-left">
-                <a href=""><i class="fa-solid fa-dice-d20"></i></i></a>
+                <a href=""><i class="fa-solid fa-dice-d20"></i></a>
                 <input type="search" value=" szukaj" name="" id="">
                 <a href="#">Produkty</a>
                 <a href="#">Oferty</a>
@@ -35,7 +39,7 @@
         </div>
     </nav>
 
-    
+
 
 
     <script src="./js/script.js"></script>
