--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <body>
 
     <nav>
-        <div class="nav-mobile">
+        <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
-            <a href=""><i class="fa-solid fa-dice-d20"></i></a>
+            <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
             <a href="#">Zaloguj się</a>
         </div>
-        <div class="nav-items">
+        <div class="nav-items nav-desktop">
             <div class="nav-items-left">
-                <a href=""><i class="fa-solid fa-dice-d20"></i></a>
+                <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
                 <input type="search" value=" szukaj" name="" id="">
                 <a href="#">Produkty</a>
                 <a href="#">Oferty</a>
