fix: update navigation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
             <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-            <a href="#">Zaloguj się</a>
+            <a href="#">Login</a>
         </div>
         <div class="nav-items nav-desktop">
             <div class="nav-items-left">
