feat: add new section- products

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="nav-items-left">
                 <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
                 <input type="search" value=" szukaj" name="" id="">
-                <a href="#">Produkty</a>
+                <a href="#product">Produkty</a>
                 <a href="#">Oferty</a>
                 <a href="#">O nas</a>
             </div>
@@ -39,7 +39,13 @@
         </div>
     </nav>
 
+    <section class="products" id="product">
+        <div class="wrapper">
+            <h2 class="section-title">Najnowsze produkty</h2>
 
+        </div>
+
+    </section>
 
 
     <script src="./js/script.js"></script>
