feat: add prouduct box

--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
         <div class="wrapper">
             <h2 class="section-title">Najnowsze produkty</h2>
 
+            <div class="product-box">
+                <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
+                <div class="product-item-title">Tytuł produktu</div>
+                <div class="product-item-description">opis</div>
+                <div class="product-item-date">data dodania</div>
+            </div>
+
+            <div class="product-box">
+                <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
+                <div class="product-item-title">Tytuł produktu</div>
+                <div class="product-item-description">opis</div>
+                <div class="product-item-date">data dodania</div>
+            </div>
+
+            <div class="product-box">
+                <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
+                <div class="product-item-title">Tytuł produktu</div>
+                <div class="product-item-description">opis</div>
+                <div class="product-item-date">data dodania</div>
+            </div>
+
         </div>
 
     </section>
