fix: update product box

--- a/index.html
+++ b/index.html
@@ -45,23 +45,35 @@
 
             <div class="product-box">
                 <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
-                <div class="product-item-title">Tytuł produktu</div>
-                <div class="product-item-description">opis</div>
-                <div class="product-item-date">data dodania</div>
+                <div class="product-item-box">
+                    <div class="product-item-title">
+                        <h3>Tytuł produktu</h3>
+                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                    </div>
+                    <div class="product-item-date">data dodania</div>
+                </div>
             </div>
 
             <div class="product-box">
                 <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
-                <div class="product-item-title">Tytuł produktu</div>
-                <div class="product-item-description">opis</div>
-                <div class="product-item-date">data dodania</div>
+                <div class="product-item-box">
+                    <div class="product-item-title">
+                        <h3>Tytuł produktu</h3>
+                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                    </div>
+                    <div class="product-item-date">data dodania</div>
+                </div>
             </div>
 
             <div class="product-box">
                 <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
-                <div class="product-item-title">Tytuł produktu</div>
-                <div class="product-item-description">opis</div>
-                <div class="product-item-date">data dodania</div>
+                <div class="product-item-box">
+                    <div class="product-item-title">
+                        <h3>Tytuł produktu</h3>
+                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                    </div>
+                    <div class="product-item-date">data dodania</div>
+                </div>
             </div>
 
         </div>
