--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                     <div class="product-item-title">
                         <h3>Tytuł produktu</h3>
                         <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                        <div class="product-item-date">data dodania</div>
                     </div>
-                    <div class="product-item-date">data dodania</div>
+                    <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
                 </div>
             </div>
 
