fix: update product box

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 <div class="product-item-box">
                     <div class="product-item-title">
                         <h3>Tytuł produktu</h3>
-                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Iste commodi corrupti culpa sequi placeat esse.</p>
                         <div class="product-item-date">data dodania</div>
                     </div>
                     <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
@@ -60,9 +61,11 @@
                 <div class="product-item-box">
                     <div class="product-item-title">
                         <h3>Tytuł produktu</h3>
-                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                        <div class="product-item-date">data dodania</div>
                     </div>
-                    <div class="product-item-date">data dodania</div>
+                    <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
                 </div>
             </div>
 
@@ -71,11 +74,14 @@
                 <div class="product-item-box">
                     <div class="product-item-title">
                         <h3>Tytuł produktu</h3>
-                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                        <div class="product-item-date">data dodania</div>
                     </div>
-                    <div class="product-item-date">data dodania</div>
+                    <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
                 </div>
             </div>
+
 
         </div>
 
