feat: create registration site

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="nav-items-right">
                 <a href="#">Zaloguj się</a>
-                <button class="sign-up-btn">Rejestracja</button>
+                <a href="./registration.html"><button class="sign-up-btn">Rejestracja</button></a>
             </div>
         </div>
     </nav>
@@ -87,7 +87,7 @@
 
     </section>
 
-
+    
     <script src="./js/script.js"></script>
 </body>
 
