feat: create registration form

--- a/registration.html
+++ b/registration.html
@@ -21,7 +21,7 @@
     <nav>
         <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
-            <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
+            <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
             <a href="#">Login</a>
         </div>
         <div class="nav-items nav-desktop">
@@ -37,6 +37,19 @@
             </div>
         </div>
     </nav>
+
+
+    <div class="login-page">
+        <div class="form">
+          <form class="register-form">
+            <input type="text" placeholder="imię"/>
+            <input type="password" placeholder="hasło"/>
+            <input type="text" placeholder="adres email"/>
+            <button>create</button>
+          </form>
+        </div>
+      </div>
+    
 
     <script src="./js/script.js"></script>
 </body>
