feat: add styles for registration page

--- a/registration.html
+++ b/registration.html
@@ -39,17 +39,18 @@
     </nav>
 
 
-    <div class="login-page">
+    <div class="registration-page">
         <div class="form">
-          <form class="register-form">
-            <input type="text" placeholder="imię"/>
-            <input type="password" placeholder="hasło"/>
-            <input type="text" placeholder="adres email"/>
-            <button>create</button>
-          </form>
+            <form class="register-form">
+                <input type="text" placeholder="imię" />
+                <input type="password" placeholder="hasło" />
+                <input type="text" placeholder="adres email" />
+                <button>utwórz konto</button>
+                <p class="message">Już zarejestrowany? <a href="#">Zaloguj się</a></p>
+            </form>
         </div>
-      </div>
-    
+    </div>
+
 
     <script src="./js/script.js"></script>
 </body>
