feat: add login form

--- a/registration.html
+++ b/registration.html
@@ -48,8 +48,16 @@
                 <button>utwórz konto</button>
                 <p class="message">Już zarejestrowany? <a href="#">Zaloguj się</a></p>
             </form>
+
+            <form class="login-form">
+                <input type="text" placeholder="nazwa urzytkowina"/>
+                <input type="password" placeholder="hasło"/>
+                <button>zaloguj</button>
+                <p class="message">Nie zarejestrowany? <a href="#">Utwórz konto</a></p>
+              </form>
         </div>
     </div>
+
 
 
     <script src="./js/script.js"></script>
