--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="nav-items nav-desktop">
             <div class="nav-items-left">
                 <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-                <input type="search" value=" szukaj" name="" id="">
+                <input type="search" placeholder=" szukaj" name="" id="">
                 <a href="#product">Produkty</a>
                 <a href="#">Oferty</a>
                 <a href="#">O nas</a>
