feat: add function to change login form

--- a/registration.html
+++ b/registration.html
@@ -46,15 +46,15 @@
                 <input type="password" placeholder="hasło" />
                 <input type="text" placeholder="adres email" />
                 <button>utwórz konto</button>
-                <p class="message">Już zarejestrowany? <a href="#">Zaloguj się</a></p>
+                <p class="message">Już zarejestrowany? <a href="#" class="login-msg">Zaloguj się</a></p>
             </form>
 
-            <form class="login-form">
-                <input type="text" placeholder="nazwa urzytkowina"/>
-                <input type="password" placeholder="hasło"/>
+            <form class="login-form disabled">
+                <input type="text" placeholder="nazwa urzytkowina" />
+                <input type="password" placeholder="hasło" />
                 <button>zaloguj</button>
-                <p class="message">Nie zarejestrowany? <a href="#">Utwórz konto</a></p>
-              </form>
+                <p class="message">Nie zarejestrowany? <a href="#" class="register-msg">Utwórz konto</a></p>
+            </form>
         </div>
     </div>
 
