fix: update login function

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#">O nas</a>
             </div>
             <div class="nav-items-right">
-                <a href="#">Zaloguj się</a>
+                <a href="./registration.html" class="nav-login-link">Zaloguj się</a>
                 <a href="./registration.html"><button class="sign-up-btn">Rejestracja</button></a>
             </div>
         </div>
@@ -87,7 +87,7 @@
 
     </section>
 
-    
+
     <script src="./js/script.js"></script>
 </body>
 
