--- a/registration.html
+++ b/registration.html
@@ -32,7 +32,7 @@
                 <a href="#">O nas</a>
             </div>
             <div class="nav-items-right">
-                <a href="#">Zaloguj się</a>
+                <a href="#" class="nav-login-link">Zaloguj się</a>
 
             </div>
         </div>
