feat: add about us site

--- a/about.html
+++ b/about.html
@@ -22,44 +22,24 @@
         <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
             <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-            <a href="#"></a>
+            <a href="./registration.html">Login</a>
         </div>
         <div class="nav-items nav-desktop">
             <div class="nav-items-left">
                 <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-                <a href="#product">Produkty</a>
+
+                <a href="./index.html#product">Produkty</a>
                 <a href="#">Oferty</a>
                 <a href="#">O nas</a>
             </div>
             <div class="nav-items-right">
-                <a href="#" class="nav-login-link">Zaloguj się</a>
-
+                <a href="./registration.html" class="nav-login-link">Zaloguj się</a>
+                <a href="./registration.html"><button class="sign-up-btn">Rejestracja</button></a>
             </div>
         </div>
     </nav>
 
-
-    <div class="registration-page">
-        <div class="form">
-            <form class="register-form">
-                <input type="text" placeholder="imię" />
-                <input type="password" placeholder="hasło" />
-                <input type="text" placeholder="adres email" />
-                <button>utwórz konto</button>
-                <p class="message">Już zarejestrowany? <a href="#" class="login-msg">Zaloguj się</a></p>
-            </form>
-
-            <form class="login-form disabled">
-                <input type="text" placeholder="nazwa urzytkowina" />
-                <input type="password" placeholder="hasło" />
-                <button>zaloguj</button>
-                <p class="message">Nie zarejestrowany? <a href="#" class="register-msg">Utwórz konto</a></p>
-            </form>
-        </div>
-    </div>
-
-
-
+    
     <script src="./js/script.js"></script>
 </body>
 
