--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
             <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-            <a href="#">Login</a>
+            <a href="./registration.html">Login</a>
         </div>
         <div class="nav-items nav-desktop">
             <div class="nav-items-left">
@@ -30,7 +30,7 @@
                 <input type="search" placeholder=" szukaj" name="" id="">
                 <a href="#product">Produkty</a>
                 <a href="#">Oferty</a>
-                <a href="#">O nas</a>
+                <a href="./about.html">O nas</a>
             </div>
             <div class="nav-items-right">
                 <a href="./registration.html" class="nav-login-link">Zaloguj się</a>
