feat: add footer

--- a/about.html
+++ b/about.html
@@ -39,7 +39,26 @@
         </div>
     </nav>
 
-    
+    <section class="aboutus" id="aboutus">
+        <div class="wrapper">
+            <h2 class="section-title">Poznaj nas</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolorem sapiente aut quibusdam quis quasi
+                ab aliquid voluptates ipsa. Consequuntur.</p>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <p class="footer-info">&copy; Nazwa strony
+            <span class="icon">
+                <a href="tel:+48 500 000 000"><i class="fa-solid fa-phone"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="mailto: mail@mail.com"><i class="fa-solid fa-at"></i></a>
+            </span>
+        </p>
+    </footer>
+
+
     <script src="./js/script.js"></script>
 </body>
 
