--- a/registration.html
+++ b/registration.html
@@ -29,7 +29,7 @@
                 <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
                 <a href="#product">Produkty</a>
                 <a href="#">Oferty</a>
-                <a href="#">O nas</a>
+                <a href="./about.html">O nas</a>
             </div>
             <div class="nav-items-right">
                 <a href="#" class="nav-login-link">Zaloguj się</a>
