fix: upate footer

--- a/registration.html
+++ b/registration.html
@@ -33,7 +33,6 @@
             </div>
             <div class="nav-items-right">
                 <a href="#" class="nav-login-link">Zaloguj się</a>
-
             </div>
         </div>
     </nav>
@@ -48,7 +47,6 @@
                 <button>utwórz konto</button>
                 <p class="message">Już zarejestrowany? <a href="#" class="login-msg">Zaloguj się</a></p>
             </form>
-
             <form class="login-form disabled">
                 <input type="text" placeholder="nazwa urzytkowina" />
                 <input type="password" placeholder="hasło" />
@@ -58,6 +56,15 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <p class="footer-info">&copy; Nazwa strony
+            <span class="icon">
+                <a href="tel:+48 500 000 000"><i class="fa-solid fa-phone"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="mailto: mail@mail.com"><i class="fa-solid fa-at"></i></a>
+            </span>
+        </p>
+    </footer>
 
 
     <script src="./js/script.js"></script>
