feat: add fetch data from a json file

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <h2 class="section-title">Najnowsze produkty</h2>
 
             <div class="product-box">
-                <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
+                <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt=""></div>
                 <div class="product-item-box">
                     <div class="product-item-title">
-                        <h3>Tytuł produktu</h3>
+                        <h3 class="product-title">Tytuł produktu</h3>
                         <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Iste commodi corrupti culpa sequi placeat esse.</p>
                         <div class="product-item-date">data dodania</div>
@@ -57,10 +57,10 @@
             </div>
 
             <div class="product-box">
-                <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
+                <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt=""></div>
                 <div class="product-item-box">
                     <div class="product-item-title">
-                        <h3>Tytuł produktu</h3>
+                        <h3 class="product-title">Tytuł produktu</h3>
                         <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Iste commodi corrupti culpa sequi placeat esse.</p>
                         <div class="product-item-date">data dodania</div>
@@ -70,10 +70,10 @@
             </div>
 
             <div class="product-box">
-                <div class="product-item-photo"><img src="https://picsum.photos/200" alt=""></div>
+                <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt=""></div>
                 <div class="product-item-box">
                     <div class="product-item-title">
-                        <h3>Tytuł produktu</h3>
+                        <h3 class="product-title">Tytuł produktu</h3>
                         <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Iste commodi corrupti culpa sequi placeat esse.</p>
                         <div class="product-item-date">data dodania</div>
