feat: add nav for mobile devices to burger btn

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
             <a href="./registration.html">Login</a>
         </div>
+        <div class="nav-mobile-list">
+            <a href="#product">Produkty</a>
+            <a href="#">Oferty</a>
+            <a href="./about.html">O nas</a>
+        </div>
         <div class="nav-items nav-desktop">
             <div class="nav-items-left">
                 <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
