feat: add function to add structure product-box to html

--- a/index.html
+++ b/index.html
@@ -48,42 +48,48 @@
         <div class="wrapper">
             <h2 class="section-title">Najnowsze produkty</h2>
 
-            <div class="product-box">
-                <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt=""></div>
-                <div class="product-item-box">
-                    <div class="product-item-title">
-                        <h3 class="product-title">Tytuł produktu</h3>
-                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Iste commodi corrupti culpa sequi placeat esse.</p>
-                        <div class="product-item-date">data dodania</div>
-                    </div>
-                    <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
-                </div>
-            </div>
+            <div class="all-products-box">
 
-            <div class="product-box">
-                <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt=""></div>
-                <div class="product-item-box">
-                    <div class="product-item-title">
-                        <h3 class="product-title">Tytuł produktu</h3>
-                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Iste commodi corrupti culpa sequi placeat esse.</p>
-                        <div class="product-item-date">data dodania</div>
+                <div class="product-box">
+                    <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt="">
                     </div>
-                    <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                    <div class="product-item-box">
+                        <div class="product-item-title">
+                            <h3 class="product-title">Tytuł produktu</h3>
+                            <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                            <div class="product-item-date">data dodania</div>
+                        </div>
+                        <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="product-box">
-                <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt=""></div>
-                <div class="product-item-box">
-                    <div class="product-item-title">
-                        <h3 class="product-title">Tytuł produktu</h3>
-                        <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Iste commodi corrupti culpa sequi placeat esse.</p>
-                        <div class="product-item-date">data dodania</div>
+                <div class="product-box">
+                    <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt="">
                     </div>
-                    <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                    <div class="product-item-box">
+                        <div class="product-item-title">
+                            <h3 class="product-title">Tytuł produktu</h3>
+                            <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                            <div class="product-item-date">data dodania</div>
+                        </div>
+                        <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                    </div>
+                </div>
+
+                <div class="product-box">
+                    <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt="">
+                    </div>
+                    <div class="product-item-box">
+                        <div class="product-item-title">
+                            <h3 class="product-title">Tytuł produktu</h3>
+                            <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Iste commodi corrupti culpa sequi placeat esse.</p>
+                            <div class="product-item-date">data dodania</div>
+                        </div>
+                        <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                    </div>
                 </div>
             </div>
         </div>
