--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
                                 elit. Iste commodi corrupti culpa sequi placeat esse.</p>
                             <div class="product-item-date">data dodania</div>
                         </div>
-                        <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                        <div class="btn-box">
+                            <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                            <p class="number-of-votes"></p>
+                        </div>
                     </div>
                 </div>
 
@@ -74,7 +77,10 @@
                                 elit. Iste commodi corrupti culpa sequi placeat esse.</p>
                             <div class="product-item-date">data dodania</div>
                         </div>
-                        <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                        <div class="btn-box">
+                            <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                            <p class="number-of-votes"></p>
+                        </div>
                     </div>
                 </div>
 
@@ -88,9 +94,13 @@
                                 elit. Iste commodi corrupti culpa sequi placeat esse.</p>
                             <div class="product-item-date">data dodania</div>
                         </div>
-                        <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                        <div class="btn-box">
+                            <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                            <p class="number-of-votes"></p>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
