--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="./about.html">O nas</a>
             </div>
             <div class="nav-items-right">
-                <a href="./registration.html" class="nav-login-link">Zaloguj się</a>
+                <a href="./registration.html?login=visible" class="nav-login-link">Zaloguj się</a>
                 <a href="./registration.html"><button class="sign-up-btn">Rejestracja</button></a>
             </div>
         </div>
@@ -48,64 +48,13 @@
         <div class="wrapper">
             <h2 class="section-title">Najnowsze produkty</h2>
 
-            <div class="all-products-box">
-
-                <div class="product-box">
-                    <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt="">
-                    </div>
-                    <div class="product-item-box">
-                        <div class="product-item-title">
-                            <h3 class="product-title">Tytuł produktu</h3>
-                            <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Iste commodi corrupti culpa sequi placeat esse.</p>
-                            <div class="product-item-date">data dodania</div>
-                        </div>
-                        <div class="btn-box">
-                            <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
-                            <p class="number-of-votes"></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="product-box">
-                    <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt="">
-                    </div>
-                    <div class="product-item-box">
-                        <div class="product-item-title">
-                            <h3 class="product-title">Tytuł produktu</h3>
-                            <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Iste commodi corrupti culpa sequi placeat esse.</p>
-                            <div class="product-item-date">data dodania</div>
-                        </div>
-                        <div class="btn-box">
-                            <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
-                            <p class="number-of-votes"></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="product-box">
-                    <div class="product-item-photo"><img class="item-photo" src="https://picsum.photos/200" alt="">
-                    </div>
-                    <div class="product-item-box">
-                        <div class="product-item-title">
-                            <h3 class="product-title">Tytuł produktu</h3>
-                            <p class="product-item-description">OPIS Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Iste commodi corrupti culpa sequi placeat esse.</p>
-                            <div class="product-item-date">data dodania</div>
-                        </div>
-                        <div class="btn-box">
-                            <button class="vote-btn"><i class="fa-regular fa-thumbs-up"></i></button>
-                            <p class="number-of-votes"></p>
-                        </div>
-                    </div>
-                </div>
+            <div class="all-products-box js-products">
 
             </div>
         </div>
     </section>
 
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
