fix: add class and update style in scss

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="nav-items nav-desktop">
             <div class="nav-items-left">
                 <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-                <input type="search" placeholder=" szukaj" name="" id="">
+                <input class="input-search" type="search" placeholder=" szukaj" name="" id="">
                 <a href="#product">Produkty</a>
                 <a href="#">Oferty</a>
                 <a href="./about.html">O nas</a>
