--- a/registration.html
+++ b/registration.html
@@ -46,16 +46,16 @@
     <div class="registration-page">
         <div class="form">
             <form class="register-form">
-                <input type="text" placeholder="imię" />
-                <input type="password" placeholder="hasło" />
-                <input type="text" placeholder="adres email" />
-                <button>utwórz konto</button>
+                <input class="register-input" type="text" placeholder="imię" />
+                <input class="register-input" type="password" placeholder="hasło" />
+                <input class="register-input" type="text" placeholder="adres email" />
+                <button class="register-btn">utwórz konto</button>
                 <p class="message">Już zarejestrowany? <a href="#" class="login-msg">Zaloguj się</a></p>
             </form>
             <form class="login-form disabled">
-                <input type="text" placeholder="nazwa urzytkowina" />
-                <input type="password" placeholder="hasło" />
-                <button>zaloguj</button>
+                <input class="login-input" type="text" placeholder="nazwa urzytkowina" />
+                <input class="login-input" type="password" placeholder="hasło" />
+                <button class="register-btn">zaloguj</button>
                 <p class="message">Nie zarejestrowany? <a href="#" class="register-msg">Utwórz konto</a></p>
             </form>
         </div>
