fix: update nav-links for each subsite

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
             <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-            <a href="./registration.html">Login</a>
+            <a href="./registration.html?login=visible">Login</a>
         </div>
         <div class="nav-mobile-list">
             <a href="./index.html#product">Produkty</a>
@@ -38,7 +38,7 @@
                 <a href="#">O nas</a>
             </div>
             <div class="nav-items-right">
-                <a href="./registration.html" class="nav-login-link">Zaloguj się</a>
+                <a href="./registration.html?login=visible" class="nav-login-link">Zaloguj się</a>
                 <a href="./registration.html"><button class="sign-up-btn">Rejestracja</button></a>
             </div>
         </div>
