--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
             <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-            <a href="./registration.html">Login</a>
+            <a href="./registration.html?login=visible">Login</a>
         </div>
         <div class="nav-mobile-list">
             <a href="#product">Produkty</a>
