--- a/registration.html
+++ b/registration.html
@@ -22,7 +22,7 @@
         <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
             <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-            <a href="./registration.html">Login</a>
+            <a href="./registration.html?login=visible">Login</a>
         </div>
         <div class="nav-mobile-list">
             <a href="./index.html#product">Produkty</a>
@@ -32,7 +32,7 @@
         <div class="nav-items nav-desktop">
             <div class="nav-items-left">
                 <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-                <a href="#product">Produkty</a>
+                <a href="./index.html#product">Produkty</a>
                 <a href="#">Oferty</a>
                 <a href="./about.html">O nas</a>
             </div>
@@ -55,7 +55,7 @@
             <form class="login-form disabled">
                 <input class="login-input" type="text" placeholder="nazwa urzytkowina" />
                 <input class="login-input" type="password" placeholder="hasło" />
-                <button class="register-btn">zaloguj</button>
+                <button class="login-btn">zaloguj</button>
                 <p class="message">Nie zarejestrowany? <a href="#" class="register-msg">Utwórz konto</a></p>
             </form>
         </div>
