fix: update: sort out the JS code

--- a/registration.html
+++ b/registration.html
@@ -71,8 +71,8 @@
         </p>
     </footer>
 
-
-    <script src="./js/script.js"></script>
+    <script src="./js/registration.js"></script>
+    <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
