feat: add new subsite offers

--- a/offers.html
+++ b/offers.html
@@ -21,20 +21,20 @@
     <nav>
         <div class="nav-items nav-mobile">
             <button class="burger-ico"><i class="fa-solid fa-bars"></i></button>
-            <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
+            <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
             <a href="./registration.html?login=visible">Login</a>
         </div>
         <div class="nav-mobile-list">
-            <a href="#product">Produkty</a>
-            <a href="./offers.html">Oferty</a>
+            <a href="./index.html#product">Produkty</a>
+            <a href="#">Oferty</a>
             <a href="./about.html">O nas</a>
         </div>
         <div class="nav-items nav-desktop">
             <div class="nav-items-left">
-                <a href="#"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
-                <input class="input-search" type="search" placeholder=" szukaj" name="" id="">
-                <a href="#product">Produkty</a>
-                <a href="./offers.html">Oferty</a>
+                <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
+
+                <a href="./index.html#product">Produkty</a>
+                <a href="#">Oferty</a>
                 <a href="./about.html">O nas</a>
             </div>
             <div class="nav-items-right">
@@ -44,15 +44,24 @@
         </div>
     </nav>
 
-    <section class="products" id="product">
+    <section class="offers" id="offers">
         <div class="wrapper">
-            <h2 class="section-title">Najnowsze produkty</h2>
-
-            <div class="all-products-box js-products">
-
-            </div>
+            <h2 class="section-title">Oferta specjalna</h2>
+            <p>Poznaj naszą specjalną ofertę</p>
         </div>
     </section>
+
+
+    <footer class="footer">
+        <p class="footer-info">&copy; Nazwa strony
+            <span class="icon">
+                <a href="tel:+48 500 000 000"><i class="fa-solid fa-phone"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="mailto: mail@mail.com"><i class="fa-solid fa-at"></i></a>
+            </span>
+        </p>
+    </footer>
+
 
     <script type="module" src="./js/script.js"></script>
 </body>
