--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         </div>
         <div class="nav-mobile-list">
             <a href="./index.html#product">Produkty</a>
-            <a href="#">Oferty</a>
+            <a href="./offers.html">Oferty</a>
             <a href="./about.html">O nas</a>
         </div>
         <div class="nav-items nav-desktop">
@@ -34,7 +34,7 @@
                 <a href="./index.html"><i class="logo-ico fa-solid fa-dice-d20"></i></a>
 
                 <a href="./index.html#product">Produkty</a>
-                <a href="#">Oferty</a>
+                <a href="./offers.html">Oferty</a>
                 <a href="#">O nas</a>
             </div>
             <div class="nav-items-right">
